syntax = "proto3";
package pbproducts;

option go_package = "./pbproducts";


message Product {
    string id = 1;
    string created_at = 2;
    string updated_at = 3;
    bool is_active = 4;
    string title = 5;
    string description = 6;
    string thumb = 7;
    uint32 availables = 8;
    float price = 9;
}

// Requests
message CreateProductRequest{
    string title = 1;
    string description = 2;
    string thumb = 3;
    uint32 availables = 4;
    float price = 5;
}

message GetProductByIdRequest{
    string id = 1;
}

message ValidateProductAvailabilityRequest{
    string id = 1;
    uint32 quantity = 2;
}

message UpdateProductRequest{
    string id = 1;
    string title = 2;
    string description = 3;
    string thumb = 4;
    float price = 5;
}

message UpdateProductAvailablesValueRequest{
    string id = 1;
    int32 value_to_add = 2;
}

message DeleteProductRequest{
    string id = 1;
}

message PaginationParams {
    uint32 page = 1;
    uint32 limit = 2;
}

// Responses
message ProductListResponse {
    repeated Product items = 1;
}

message DeleteProductResponse{
    bool deleted = 1;
}

message ValidateProductAvailabilityResponse{
    bool available = 1;
}


service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (Product);
    rpc UpdateProduct(UpdateProductRequest) returns (Product);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts(PaginationParams) returns (ProductListResponse);
    rpc GetProductById(GetProductByIdRequest) returns (Product);
    rpc ValidateProductAvailability(ValidateProductAvailabilityRequest) returns (ValidateProductAvailabilityResponse);
    rpc UpdateProductAvailablesValue(UpdateProductAvailablesValueRequest) returns (Product);
}